<resources>
    <string name="app_name">pv239</string>
    <string name="facebook_app_id">513827532612705</string>
    <string name="fb_login_protocol_scheme">fb513827532612705</string>
    <string name="login_label">WannaPlay?</string>
    <string name="nick_name_header">Choose a nick name</string>
    <string name="google_app_id">838115174907-ugvvp61c6ke85voohr04v63n0p03tfg6.apps.googleusercontent.com</string>
    <string name="nickname_edit_text_hint">Enter a nickname</string>
    <string name="confirm">Confirm</string>
    <string name="home">Home</string>
    <string name="groups">Groups</string>
    <string name="events">Events</string>
    <string name="create_group">Create group</string>
    <string name="group_name_edit_hint">Name your group</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="create_group_success">Group created.</string>
    <string name="create_group_fail">Failed to create group.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_event_name">Event name</string>
    <string name="create_event_description">Description</string>
    <string name="select_party_label">Party:</string>
    <string name="date_form">Date</string>
    <string name="form_party">Party</string>
    <string name="party_select_preview">%s #%d</string>
    <string name="join_group">Join group</string>
    <string name="group_id_edit_hint">Group id</string>
    <string name="group_detail_members">Members: %s</string>
    <string name="join">join</string>
    <string name="join_group_success">Successfully joined group.</string>
    <string name="join_group_failed">Failed to join group.</string>
    <string name="leave_group">Leave group</string>
    <string name="group_left">Group left</string>
    <string name="delete_group">Delete group</string>
    <string name="no_groups_label">You are not a member of any group.</string>
    <string name="group_avatar">group avatar</string>
    <string name="event_avatar">Event avatar</string>
    <string name="participants">Participants</string>
    <string name="join_event">Join event</string>
    <string name="leave_event">Leave event</string>
    <string name="event_detail_date">Date: %s</string>
    <string name="event_detail_time">Time: %s</string>
    <string name="event_detail_owner">Owner: %s</string>
    <string name="event_detail_participants">Participants: %d</string>
    <string name="event_joined">Event joined.</string>
    <string name="event_left">Event left.</string>
    <string name="attending">attending</string>
    <string name="description">Description</string>
    <string name="create_event_btn">Create event</string>
    <string name="create_event_party_label">Group: %s</string>
    <string name="event_created">Event created.</string>
    <string name="event_creation_failed">Failed to create event.</string>
    <string name="profile">Profile</string>
    <string name="profile_icon">profile icon</string>
    <string name="sign_out">Sign out</string>

    <string name="channel_name">WannaPlay event reminder</string>
    <string name="channel_description">Event reminder</string>
    <string name="there_are_no_new_events_happening">There are no new events happening.</string>

</resources>
