<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_create_group"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.CreateGroupDialogFragment"
    android:background="@color/dialogColor"
    android:layout_gravity="center"
    android:layout_margin="32dp">

    <TextView
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:id="@+id/create_group_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_group"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/high_emphasis"
        />


    <EditText
        android:id="@+id/edit_group_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:importantForAutofill="no"
        android:hint="@string/group_id_edit_hint"
        app:layout_constraintTop_toBottomOf="@id/create_group_title"
        android:inputType="number" />

    <Button
        android:id="@+id/group_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_group_id"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/dialogColor"
        android:textColor="@color/colorPrimary"
        android:text="@string/cancel"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:id="@+id/group_join_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_group_id"
        android:layout_marginEnd="16dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/dialogColor"
        android:textColor="@color/colorPrimary"
        android:text="@string/join"
        style="?android:attr/borderlessButtonStyle"
        />

</androidx.constraintlayout.widget.ConstraintLayout>