<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.NickNameFragment">

    <TextView
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:text="@string/nick_name_header"
        app:layout_constraintBottom_toTopOf="@id/nick_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:padding="8dp"
        android:hint="@string/nickname_edit_text_hint"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:maxLines="1"
        android:inputType="text"
        android:id="@+id/nick_name_edit"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:autofillHints=".AUTOFILL_HINT_USERNAME" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nick_name_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>