<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EventDetailFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:visibility="gone"
        android:layout_gravity="center" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/event_detail"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/event_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Event name"
            style="@style/TextAppearance.AppCompat.Headline"
            />
        <TextView
            android:id="@+id/party_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintStart_toStartOf="@id/event_name"
            app:layout_constraintTop_toBottomOf="@id/event_name"
            tools:text="Party name"/>
        <TextView
            android:id="@+id/date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintStart_toStartOf="@id/party_name"
            app:layout_constraintTop_toBottomOf="@id/party_name"
            tools:text="Date: 30.03.2020"/>
        <TextView
            android:id="@+id/time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintStart_toStartOf="@id/date_label"
            app:layout_constraintTop_toBottomOf="@id/date_label"
            tools:text="Time: 18:00"/>
        <TextView
            android:id="@+id/owner_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintStart_toStartOf="@id/time_label"
            app:layout_constraintTop_toBottomOf="@id/time_label"
            tools:text="Owner: Lomitko17"/>
        <TextView
            android:id="@+id/participants_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="@id/owner_label"
            app:layout_constraintTop_toBottomOf="@id/owner_label"
            tools:text="Participants: 3"/>
        <TextView
            android:id="@+id/participants_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            style="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="@id/participants_label"
            app:layout_constraintTop_toBottomOf="@id/participants_label"
            tools:text="Vectoun \nLomitko17\nPavel"/>
        <TextView
            android:id="@+id/description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="@id/participants_names"
            app:layout_constraintTop_toBottomOf="@id/participants_names"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            style="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="@id/description_label"
            app:layout_constraintTop_toBottomOf="@id/description_label"
            tools:text="Lorem ipsum dolor mit"/>
        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:id="@+id/join_button"
            android:text="@string/join_event"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:id="@+id/leave_button"
            android:backgroundTint="@color/colorError"
            android:textColor="@color/colorOnError"
            android:text="@string/leave_event"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>